src/objects/OrderApi__Receipt__c.object
<CustomObject>
    <description>Receipts track Customer Payments and Refunds.</description>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override/Required** The account the payment was received from or the refund was sent to.</description>
        <inlineHelpText>**System Calculated/Override/Required** The account the payment was received from or the refund was sent to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Action_Information__c</fullName>
        <description>JSON Field that will store action information such as custom links that may need to be displayed.</description>
        <inlineHelpText>JSON Field that will store action information such as custom links that may need to be displayed.</inlineHelpText>
        <label>Action Information</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Applied_Amount__c</fullName>
        <description>**System Calculated** The total amount of the payment that has been applied to transactions.</description>
        <inlineHelpText>**System Calculated** The total amount of the payment that has been applied to transactions.</inlineHelpText>
        <label>Applied Amount</label>
        <summarizedField>OrderApi__Receipt_Line__c.OrderApi__Total__c</summarizedField>
        <summaryForeignKey>OrderApi__Receipt_Line__c.OrderApi__Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Balance__c</fullName>
        <description>**System Calculated** The difference between the Payment Amount and the Applied Amount.</description>
        <formula>OrderApi__Total__c - OrderApi__Applied_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** The difference between the Payment Amount and the Applied Amount.</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Best Practice** Associate all receipts with a financial batch.</description>
        <inlineHelpText>**Best Practice** Associate all receipts with a financial batch.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>OrderApi__Batch__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_City__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Contact__c</fullName>
        <description>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Country__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Postal_Code__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_State__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Street__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Address or Contact&apos;s Mailing Address, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Address or Contact&apos;s Mailing Address, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override/Required** Link to the related Business Group auto-populates if not specified on record creation based upon the user&apos;s &quot;Default Business Group&quot; setting on the custom settings object.</description>
        <inlineHelpText>**System Calculated/Override/Required** Link to the related Business Group auto-populates if not specified on record creation based upon the user&apos;s &quot;Default Business Group&quot; setting on the custom settings object.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Billing_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the invoice will populate the billing contact field.</description>
        <inlineHelpText>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the invoice will populate the billing contact field.</inlineHelpText>
        <label>Calculate Billing Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Memo__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked the system will populate the memo for the receipt making it easy to have helpful memo&apos;s to both customers and accountants.</description>
        <inlineHelpText>When checked the system will populate the memo for the receipt making it easy to have helpful memo&apos;s to both customers and accountants.</inlineHelpText>
        <label>Calculate Memo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Shipping_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked the system will calculate shipping details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s shipping address is used. The contact on the receipt will populate the shipping contact field.</description>
        <inlineHelpText>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the invoice will populate the billing contact field.</inlineHelpText>
        <label>Calculate Shipping Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override/Required** The contact the payment was received from or the refund is being sent to.</description>
        <inlineHelpText>**System Calculated/Override/Required** The contact the payment was received from or the refund is being sent to.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_Link__c</fullName>
        <description>**System Calculated** A link to the record the system considers the &quot;Customer&quot;  as determined by the &quot;Entity&quot; field.</description>
        <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;), OrderApi__Account__r.Name, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName)</formula>
        <inlineHelpText>**System Calculated** A link to the record the system considers the &quot;Customer&quot;  as determined by the &quot;Entity&quot; field.</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>**Required** The Date the Receipt was processed. Default&apos;s to the Date the Entry was created.</description>
        <inlineHelpText>**Required** The Date the Receipt was processed. Default&apos;s to the Date the Entry was created.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Deposit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** The GL account associated with the bank account the funds will be deposited into.</description>
        <inlineHelpText>**Required** The GL account associated with the bank account the funds will be deposited into.</inlineHelpText>
        <label>Deposit Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__EPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** When receipts are created from payment activities the source a link to the source payment activity will populate in this field.</description>
        <inlineHelpText>**System Calculated** When receipts are created from payment activities the source a link to the source payment activity will populate in this field.</inlineHelpText>
        <label>E-Payment (Source)</label>
        <referenceTo>OrderApi__EPayment__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>**Required** The entity the system should consider the &quot;Customer&quot; related to the record.</description>
        <inlineHelpText>**Required** The entity the system should consider the &quot;Customer&quot; related to the record.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Gateway_Transaction_Id__c</fullName>
        <description>** System Calculated ** The transaction ID reported from your payment gateway. Use this key as a unique key for payment reconciliation between your merchant services provider and our database.</description>
        <inlineHelpText>** System Calculated ** The transaction ID reported from your payment gateway. Use this key as a unique key for payment reconciliation between your merchant services provider and our database.</inlineHelpText>
        <label>Gateway Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Payment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>**System Calculated** Checked when the Receipt is related to a customer payment.</description>
        <inlineHelpText>**System Calculated** Checked when the Receipt is related to a customer payment.</inlineHelpText>
        <label>Is Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default unchecked. When checked, the receipt will create a new cash transaction (journal entry) and the posted date will populate with the value of today&apos;s date.</description>
        <inlineHelpText>Default unchecked. When checked, the receipts will create a new cash transaction (journal entry) and the posted date will populate with the value of today&apos;s date.</inlineHelpText>
        <label>Is Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the Receipt is for a customer refund</description>
        <inlineHelpText>Checked when the Receipt is for a customer refund</inlineHelpText>
        <label>Is Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Memo__c</fullName>
        <description>Customer-facing memo for the receipt.</description>
        <inlineHelpText>Customer-facing memo for the receipt.</inlineHelpText>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to payment gateway, populates automatically for all epayment transactions.</description>
        <inlineHelpText>Lookup to payment gateway, populates automatically for all epayment transactions.</inlineHelpText>
        <label>Payment Gateway</label>
        <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method_Description__c</fullName>
        <description>** System Calculated ** Derived from the source ePayment.</description>
        <formula>IF (OrderApi__EPayment__c != null,

IF (OrderApi__EPayment__r.OrderApi__Payment_Method_Type__c == &apos;credit_card&apos;,

UPPER(OrderApi__EPayment__r.OrderApi__Card_Type__c) &amp; &quot; **&quot; &amp; OrderApi__EPayment__r.OrderApi__Last_Four_Digits__c &amp; &quot; (&quot; &amp; TEXT(OrderApi__EPayment__r.OrderApi__Month__c) &amp; &quot;/&quot; &amp; TEXT(OrderApi__EPayment__r.OrderApi__Year__c) &amp; &quot;)&quot;,

OrderApi__EPayment__r.OrderApi__Bank_Name__c  &amp; &quot; &quot; &amp; OrderApi__EPayment__r.OrderApi__Bank_Account_Type__c &amp; &quot; &quot; &amp; OrderApi__EPayment__r.OrderApi__Bank_Account_Number__c


),&apos;N/A&apos;)</formula>
        <inlineHelpText>** System Calculated ** Derived from the source ePayment.</inlineHelpText>
        <label>Payment Method Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use a saved payment method for the customer without having to enter in a new credit card or bank account (not supported for all gateways - check with your administrator to see if you are using a gateway that supports this functionality).</description>
        <inlineHelpText>Use a saved payment method for the customer without having to enter in a new credit card or bank account (not supported for all gateways - check with your administrator to see if you are using a gateway that supports this functionality).</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>OrderApi__Payment_Method__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Type__c</fullName>
        <description>**Required** The payment type (Check, Credit Card, EFT, or Other).</description>
        <inlineHelpText>**Required** The payment type (Check, Credit Card, EFT, or Other).</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                    <label>Check</label>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Posted_Date__c</fullName>
        <description>**System Calculated/Override** Populates with the value of the date the &quot;Is Posted&quot; flag is checked.</description>
        <inlineHelpText>**System Calculated/Override** Populates with the value of the date the &quot;Is Posted&quot; flag is checked.</inlineHelpText>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Process_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this flag will process the refund.</description>
        <inlineHelpText>Checking this flag will process the refund.</inlineHelpText>
        <label>Process Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Caluclated** Lookup to the reciept for which you are refunding.</description>
        <inlineHelpText>**System Caluclated** Lookup to the reciept for which you are refunding.</inlineHelpText>
        <label>Receipt</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OrderApi__Receipt__c.OrderApi__Is_Payment__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OrderApi__Receipt__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Reference_Number__c</fullName>
        <description>**Required** The check number or credit card/bank authorization code related to the payment.</description>
        <inlineHelpText>**Required** The check number or credit card/bank authorization code related to the payment.</inlineHelpText>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this flag will create a refund record.</description>
        <inlineHelpText>Checking this flag will create a refund record.</inlineHelpText>
        <label>Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to related Sales Order.</description>
        <inlineHelpText>**System Calculated/Override** Link to related Sales Order.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_City__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Contact__c</fullName>
        <description>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Country__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Postal_Code__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_State__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Shipping State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Shipping State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Street__c</fullName>
        <description>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Shipping Details is checked.</description>
        <inlineHelpText>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Shipping Details is checked.</inlineHelpText>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Source_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional source code for the receipt. This will populate on all invoices related to the receipt. If a source code is already on an invoice the receipt is applied to, the original source code will not be updated with the value of the source code on the receipt.</description>
        <inlineHelpText>Populates on all invoices related to the receipt. If a source code is already assigned to an invoice the receipt is applied to, the invoice will not be updated with the new source code.</inlineHelpText>
        <label>Source Code</label>
        <referenceTo>OrderApi__Source_Code__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**Conditionally Required** Receipt Total, required to post receipt to GL (Transactions).</description>
        <inlineHelpText>**Conditionally Required** Receipt Total, required to post receipt to GL (Transactions).</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Type__c</fullName>
        <description>**Required/Do Not Modify Picklist Values** &quot;Cash Receipt&quot; receipts are used to record inbound cash such as customer payments. &quot;Cash Payment&quot; receipts are used to record outbound cash such as refunds.</description>
        <inlineHelpText>**Required/Do Not Modify Picklist Values** &quot;Cash Receipt&quot; receipts are used to record inbound cash such as customer payments. &quot;Cash Payment&quot; receipts are used to record outbound cash such as refunds.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                    <default>true</default>
                    <label>Payment</label>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Receipt</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Type__c</columns>
        <columns>OrderApi__Customer_Link__c</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>OrderApi__Batch__c</columns>
        <columns>OrderApi__Deposit_Account__c</columns>
        <columns>OrderApi__Payment_Type__c</columns>
        <columns>OrderApi__Date__c</columns>
        <columns>OrderApi__Is_Posted__c</columns>
        <columns>OrderApi__Posted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>